# raft-hpc-core

./: Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
proto/: raft.proto
scripts/: set-version.sh
src/: backup.rs  lib.rs  log_store_variant.rs  network.rs  persistent_store.rs  state_machine.rs  store.rs  transport.rs  transport_server.rs
